# steward

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  MEMORY_PLAN.md  MEMORY_REQUIREMENTS.md  README.md  run-batch.sh  run-batch2.sh
.claude/: settings.json
.github/workflows/: ci.yml  pr-review.yml
config/: guardrails.yaml  identity.md  permissions.yaml
config/mcp-manifests/: gmail.yaml
crates/steward-channels/: Cargo.toml
crates/steward-channels/src/: confirmation.rs  lib.rs  manager.rs  telegram.rs  whatsapp.rs
crates/steward-core/: Cargo.toml
crates/steward-core/src/: agent.rs  conversation.rs  guardian.rs  lib.rs  permissions.rs  router.rs  scheduler.rs  worker.rs
crates/steward-core/src/llm/: anthropic.rs  mod.rs  ollama.rs  router.rs
crates/steward-memory/: Cargo.toml
crates/steward-memory/src/: embedding.rs  extraction.rs  integrity.rs  lib.rs  provenance.rs  search.rs  workspace.rs
crates/steward-security/: Cargo.toml
crates/steward-security/src/: audit.rs  egress.rs  ingress.rs  leak_detector.rs  lib.rs  secret_broker.rs
crates/steward-server/: Cargo.toml
crates/steward-server/src/: main.rs
crates/steward-tools/: Cargo.toml
crates/steward-tools/src/: lib.rs  registry.rs  staging.rs  subagent.rs  wasm_sandbox.rs
crates/steward-tools/src/built_in/: file_edit.rs  file_list.rs  file_read.rs  file_write.rs  memory_search.rs  memory_store.rs  mod.rs  shell.rs  web_fetch.rs  web_search.rs  workspace.rs
crates/steward-tools/src/mcp/: circuit_breaker.rs  introspect.rs  manifest.rs  mod.rs  proxy.rs  schema_rewrite.rs  transport_http.rs  transport_stdio.rs
crates/steward-types/: Cargo.toml
crates/steward-types/src/: actions.rs  config.rs  config_loader.rs  errors.rs  lib.rs  traits.rs
deploy/: Dockerfile  VPS_SETUP_PROMPT.md  docker-compose.yml
docs/: GETTING_STARTED.md  ROADMAP.md  architecture.md  implementation-plan.md
docs/tasks/: TASK-1.1.md  TASK-1.2.md  TASK-1.3.md  TASK-1.4.md  TASK-2.1.md  TASK-2.2.md  TASK-2.3.md  TASK-2.4.md  TASK-3.1.md  TASK-3.2.md  TASK-3.3.md  TASK-3.4.md  TASK-4.1.md  TASK-4.2.md  TASK-4.3.md  TASK-4.4.md  TASK-5.1.md  TASK-5.2.md  TASK-5.3.md  TASK-6.1.md  TASK-6.2.md
tests/integration/: Cargo.toml  smoke_test.rs
