[package]
name = "steward-channels"
version = "0.1.0"
edition.workspace = true
description = "Communication channel adapters for Steward: WhatsApp, Telegram, Slack, and more"

[dependencies]
steward-types.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
axum.workspace = true
reqwest.workspace = true
