[package]
name = "steward-memory"
version = "0.1.0"
edition.workspace = true
description = "Memory subsystem for Steward: PostgreSQL + pgvector persistent memory with provenance tracking"

[dependencies]
steward-types.workspace = true
async-trait.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
