[package]
name = "steward-server"
version = "0.1.0"
edition.workspace = true
description = "Steward agent server binary — wires all subsystems and runs the agent"

[[bin]]
name = "steward"
path = "src/main.rs"

[dependencies]
steward-types.workspace = true
steward-security.workspace = true
steward-core.workspace = true
steward-tools.workspace = true
steward-memory.workspace = true
steward-channels.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive", "env"] }
