[package]
name = "steward-types"
version = "0.1.0"
edition.workspace = true
description = "Shared traits, types, and errors for the Steward agent framework"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
