[package]
name = "steward-types"
version = "0.1.0"
edition.workspace = true
description = "Shared traits, types, and errors for the Steward agent framework"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
notify.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
