[package]
name = "steward-integration-tests"
version = "0.1.0"
edition.workspace = true
publish = false

[[test]]
name = "smoke_test"
path = "smoke_test.rs"

[dev-dependencies]
steward-types.workspace = true
steward-core.workspace = true
steward-security.workspace = true
steward-tools.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true
